Additional small typo fix.

--- a/mental-model-paper/death-of-metaphor.tex
+++ b/mental-model-paper/death-of-metaphor.tex
@@ -60,7 +60,7 @@ His review for the Address Book application in Lion had some actual criticisms b
 
 % JD: Don't forget the LaTeX quote rule.  Plus, in conventional writing, a quote-within-a-quote
 %     should use singles.
-Siracusa held a generally negative review about the updated Contacts application in Mavericks. Yet for Address Book, he mentioned serious issues with the applications usability due to its heavy employment of metaphor. This is the the actual problem. Apple loves beauty, but has realized that usability trumps aesthetics. Siracusa mentions his opinion of usability vs. aesthetics in his Lion review as he says, ``People will take "really cool-looking but slightly harder to use" over "usable but ugly" any day.'' Yet, if one explores a little further into his review, he mentions, ``We're far past the point where computer interfaces need to reference their forebearers in the physical world in order to be understandable.'' The user interface's usability should be the top priority, not the way it looks. \footnote{See Figures ~\ref{fig:address-book} and ~\ref{fig:contacts} at the end of the paper to see a visual comparison of Address Book and Contacts.}
+Siracusa held a generally negative review about the updated Contacts application in Mavericks. Yet for Address Book, he mentioned serious issues with the applications usability due to its heavy employment of metaphor. This is the the actual problem. Apple loves beauty, but has realized that usability trumps aesthetics. Siracusa mentions his opinion of usability vs. aesthetics in his Lion review as he says, ``People will take "really cool-looking but slightly harder to use" over "usable but ugly" any day.'' Yet, if one explores a little further into his review, he mentions, ``We're far past the point where computer interfaces need to reference their forebears in the physical world in order to be understandable.'' The user interface's usability should be the top priority, not the way it looks. \footnote{See Figures ~\ref{fig:address-book} and ~\ref{fig:contacts} at the end of the paper to see a visual comparison of Address Book and Contacts.}
  
 \subsection{Summary}
 Apple realizes the potential of \textit{easing the brakes} on metaphor and skeuomorphism. They understand that their users are, god forbid, \textit{smart} enough to learn new ways of interacting with applications.
