went through some of Dondi's commit and changed the paper accordngly

--- a/mental-model-paper/death-of-metaphor.tex
+++ b/mental-model-paper/death-of-metaphor.tex
@@ -20,7 +20,7 @@ Metaphor, in the broadest sense of the term for the discipline of computer scien
 
 \pagebreak
 \section{Metaphor and the Human Brain} 
-% JD: Classic move: start with a personal story.  Steve Jobs did that a lot :)
+
 My grandmother was a pharmacist at an army hospital in Warsaw, Poland for 50 years up until her retirement. She used paper and pen for everything related to her job: logging the number of milligrams of drugs taken out to make antibacterial creams, logging the number of liters of isopropyl alcohol given to surgeons for disinfection, filling out prescriptions, etc. On a not so fateful day, her management let her know that they would be switching from paper and pen to a machine running Windows XP for all her work related logging. A once incredibly fast and efficient pharmacist was rendered helpless by a technology that was meant to streamline her work. She eventually learned how to work on that machine after countless hours at work asking her younger coworkers for guidance. I still see her struggling with her laptop at home when I Skype with her. \footnote{Yes, my 83 year old grandmother knows how to use Skype, and I am incredibly proud.}
 
 Before the invention of the modern personal computer, imagine (or recall if you can) what seeing one for the first time would be like.
@@ -29,7 +29,6 @@ Personally, I clearly remember seeing a large bundle sitting on my father's desk
 If you were to ask random people what they know about the brain, more often than not, most of them would mention something along the lines that the brain has two hemispheres. They would probably mention that the left side is perceived as being analytical, technical, and logical and that the right is perceived as being creative, artistic, and expressive. Although this separation in the brain has been proven to not be so dichotomic by studies and research, it provides an interesting parallel to computer scientists and their employment of metaphor.
 
 Just as the corpus calossum, the flat bundle of neural fibers beneath the cortex, connects the left and right cerebral hemispheres and facilitates interhemispheric communication, metaphor is the connection between the highly artistic and expressive people and the highly  technical and analytical people in this world. Or put directly for this paper, metaphor is the connection between computer scientists and the nontechnical people. My grandmother and my younger self represent the kind of people that metaphor aims to assist in learning new technologies. How else is 65 year old woman or an eight year old child supposed to learn how to interact with a graphical user interface when they have never tried one? The easiest way for us two to have learned anything would have been to capitalize on what we already knew.
-% JD: Interesting, as it were, *metaphor* for "metaphor." :)
 
 The amount people that have used a graphical user interface has exponentially grown since the day that Windows XP machine came rattling into my grandmother's pharmacy. It is clear that more and more people are using computers. The rates in which computer use has increased in homes in the United States is staggering. From the year of 1984 to 2010, the percentage of households with a computer went from 8.2\% to 76.7\%. Within little than over a fourth of a decade, that percentage roughly saw a 835\% increase. \cite{computer-use} One can assume that since there are more computers in the homes of Americans, there are more people in America that use them. Or in other words, America has a lot more technologically apt people simply due to their exposure to a computer. Due to the expanding margin of people who have a computer and know how to use one, this shows that the target audience for any technology should be geared towards people who are slightly technologically apt.
 
@@ -38,7 +37,6 @@ The amount people that have used a graphical user interface has exponentially gr
 Metaphor may seem like a new phenomenon in CS (Computer Science) to people not involved in the field. Yet, metaphor has been a topic of conversation even before GUI's (graphical user interfaces) came to stardom.
 
 In its more modern history, metaphor has always been the topic of many discussions and the focus of countless debates. In years like 1998, writers like Faulkner were writing that, ``Designers of systems should, where possible, use metaphors that the user will be familiar with.'' \cite{essence}  Or in 1995, Hill wrote, ``Metaphors make it easy to learn about unfamiliar objects.'' \cite{practical} Or even earlier in 1992, Macintosh's human interface guidelines say, ``Use metaphors involving concrete, familiar ideas and make the metaphors plain, so that users have a set of expectations to apply to computer environments.'' \cite{apple} But there always were the occasional skeptics. There were people who anticipated its potential failure. In an essay in a book titled \textit{The Art Of Human-Computer Interface Design} Theodor Holm Nelson writes, ``What I object to is severalfold: first, these mnemonic gimmicks are not very useful for presenting the ideas in the first place; second, their resemblance to any real objects in the world is so tenuous that it gets in the way more than it helps; and third, which is by far most important, the metaphor becomes a dead weight. Once the metaphor is instituted, every related function has to become a part of it.''\cite{art-hci} This back and forth between fully endorsing and fully condemning the use of metaphor shows that there ``have been many attempts over the past 20 years to regularize the theory of interface metaphor.'' And during those years, it was clear to see that any recommendation to use metaphor was ``belied by complaints from researchers.'' One could simply turn to designs that relied upon metaphor that ``failed after undue reliance on metaphor.'' \cite{reification}
-% JD: Nice selection of citations here.
 
 Well, where does this leave us? In the time that has passed since the previously cited authors wrote, we are now left in a place where we must fine tune where metaphor works and where it does not. We can only hope to get closer to regularizing a theory of interface metaphor.
 
@@ -48,8 +46,7 @@ Apple has realized that as technology is becoming more and more ingrained into o
 \subsection{iOS7}
 With no surprise, the release of iOS 7 garnered much support and much backlash. Some of its criticisms include its transition to overly simple menus, its change from icons to words, and its lifeless apps. With its goal being simplicity, Apple comments on their shift, ``The interface is purposely unobtrusive. Conspicuous ornamentation has been stripped away. Unnecessary bars and buttons have been removed.'' \cite{apple-design} They have realized that \textit{skeuomorhpism}, the design concept of making items represented resemble their real-world counterparts (the definition is surprisingly not too far off from metaphor), serves no purpose in their new operating system. This design concept was heavily employed in the previous version of Apple's iOS.
 
-In the Ars Technica Review of iOS 7, the author Andrew Cunningham isn't afraid to make fun of their previous mobile operating systems by mentioning,``Will people understand what the Newsstand folder is for if we don?t make it look like a little wooden shelf? Will people understand that things have been deleted from Passbook if we don?t throw their virtual coupons into a virtual paper shredder?'' \cite{ars-technica-iOS7} These are questions that now sound funny, but as the modern personal computer was being pioneered, these questions would have sounded appropriate.
-% JD: Some mis-encoded characters in the quote above.
+In the Ars Technica Review of iOS 7, the author Andrew Cunningham isn't afraid to make fun of their previous mobile operating systems by mentioning,``Will people understand what the Newsstand folder is for if we don't make it look like a little wooden shelf? Will people understand that things have been deleted from Passbook if we don't throw their virtual coupons into a virtual paper shredder?'' \cite{ars-technica-iOS7} These are questions that now sound funny, but as the modern personal computer was being pioneered, these questions would have sounded appropriate.
 
 \subsection{OSX 10.9 Mavericks}
 Apple's most recent update of the big cat operating system line followed iOS7 in its push away from metaphor the most part, yet not entirely. It dealt away with most lifelike textures like leather, linen, etc. I turn to John Siracusa, famous for his in-depth articles about Mac operating systems to see why Apple is pushing away from metaphor.
@@ -58,9 +55,7 @@ A prime example of why Apple went for a \textit{flatter} and less realistic look
 
 His review for the Address Book application in Lion had some actual criticisms beyond the application's design. The old app looked like a book: leather-bound and it even had a red ribbon bookmark. But, the app did not behave like a book. The pages can't be turned, the bookmark can't be removed, groups were located on a different page (you can't look at three pages at once in a book). The application has ``mixed [metaphors] that sends mixed signals.''  The applications, like Address Book and iCal (another prime example employing skeuomorphism), were simply limited by their physical counterparts and implied functionality that simply doesn't exist. \cite{ars-technica-lion}
 
-% JD: Don't forget the LaTeX quote rule.  Plus, in conventional writing, a quote-within-a-quote
-%     should use singles.
-Siracusa held a generally negative review about the updated Contacts application in Mavericks. Yet for Address Book, he mentioned serious issues with the applications usability due to its heavy employment of metaphor. This is the the actual problem. Apple loves beauty, but has realized that usability trumps aesthetics. Siracusa mentions his opinion of usability vs. aesthetics in his Lion review as he says, ``People will take "really cool-looking but slightly harder to use" over "usable but ugly" any day.'' Yet, if one explores a little further into his review, he mentions, ``We're far past the point where computer interfaces need to reference their forebears in the physical world in order to be understandable.'' The user interface's usability should be the top priority, not the way it looks. \footnote{See Figures ~\ref{fig:address-book} and ~\ref{fig:contacts} at the end of the paper to see a visual comparison of Address Book and Contacts.}
+Siracusa held a generally negative review about the updated Contacts application in Mavericks. Yet for Address Book, he mentioned serious issues with the applications usability due to its heavy employment of metaphor. This is the the actual problem. Apple loves beauty, but has realized that usability trumps aesthetics. Siracusa mentions his opinion of usability vs. aesthetics in his Lion review as he says, ``People will take `really cool-looking but slightly harder to use' over `usable but ugly` any day.'' Yet, if one explores a little further into his review, he mentions, ``We're far past the point where computer interfaces need to reference their forebears in the physical world in order to be understandable.'' The user interface's usability should be the top priority, not the way it looks. \footnote{See Figures ~\ref{fig:address-book} and ~\ref{fig:contacts} at the end of the paper to see a visual comparison of Address Book and Contacts.}
  
 \subsection{Summary}
 Apple realizes the potential of \textit{easing the brakes} on metaphor and skeuomorphism. They understand that their users are, god forbid, \textit{smart} enough to learn new ways of interacting with applications.
@@ -78,16 +73,11 @@ Yet, in cases of ``sharp discontinuity'', the employment of metaphor breaks down
 
 \section{Why and where metaphor works}
 \subsection{Why it works}
-% JD: Some factoid corrections: it's Ben *Shneiderman*, and "Norman Nielsen" is really two people, Don Norman
-%     and Jakob Nielsen.  Jakob Nielsen did do the heuristics, yes, and there is no mention of Don Norman's
-%     work here, so I suspect that you just mistook Nielsen's first name to be Norman.
-Before looking at where and why metaphor do not work, let us explore where and why it does. Let us turn to Ben Shniederman, Norman Nielsen, and Bruce Tognazzini. Each of these very influential people have their own lists or rules for usability. Within Shniederman's Eight Golden Rules, Nielsen's Ten Usability Heuristics, and Tognazzini's Sixteen First Principles of Interaction Design, there is a unifying rule. The rule of error prevention is delightfully found in each list in some fashion or form. \cite{shniederman-golden-rules} \cite{tognazzini-first-principles} \cite{nielsen-usability-heuristics} As an aside, Tognazzini actually explicitly states metaphor and their use as one of his First Principles of Design.
-% JD: For the multiple cites above, better to do them comma-separated:
-%     \cite{shniederman-golden-rules,tognazzini-first-principles,nielsen-usability-heuristics}
+Before looking at where and why metaphor do not work, let us explore where and why it does. Let us turn to Ben Shniederman, Jakob Nielsen, and Bruce Tognazzini. Each of these very influential people have their own lists or rules for usability. Within Shniederman's Eight Golden Rules, Nielsen's Ten Usability Heuristics, and Tognazzini's Sixteen First Principles of Interaction Design, there is a unifying rule. The rule of error prevention is delightfully found in each list in some fashion or form. \cite{shniederman-golden-rules, tognazzini-first-principles, nielsen-usability-heuristics} As an aside, Tognazzini actually explicitly states metaphor and their use as one of his First Principles of Design.
 
 Metaphor is relevant and important for the unifying rule of preventing errors. For example, if a user is exposed to the same type of metaphors in a user interface, they are less likely to encounter errors during their experience. The beauty of metaphor is that it knows no singular platform, operating system, or implementation. For example, the error rate in learning how to use a new phone, metaphor assists greatly. Differing phone user interfaces that utilize the same icon for an application are also helping their users retain an easiness in the learning how to use a new phone. Metaphor works because it helps prevent errors.
 
-To put it succinctly and more abstractly, metaphor works because "it is the main mechanism through which we comprehend abstract concepts and perform abstract reasoning" and it "allows us to understand a relatively abstract or inherently unstructured subject matter in terms of a more concrete subject matter" \cite{metaphor-theory-practice} Any new technology is definitely an unstructured subject matter for someone who has never encountered it.
+To put it succinctly and more abstractly, metaphor works because ``it is the main mechanism through which we comprehend abstract concepts and perform abstract reasoning" and it ``allows us to understand a relatively abstract or inherently unstructured subject matter in terms of a more concrete subject matter".\cite{metaphor-theory-practice} Any new technology is definitely an unstructured subject matter for someone who has never encountered it.
 
 \subsection{Where it works}
 Now, let us also look into chapter two of Donald Norman's \textit{The Design of Everyday Things}. Norman writes about his seven stages of any action listed as so \cite{norman-seven-stages}:
@@ -106,7 +96,7 @@ Given that these are the seven stages to any action, the employment of metaphor 
 Metaphor works where it can make an action more efficient while preventing errors.
 
 \section{Why and where metaphor does not work}
-Employing metaphors that do not fulfill the physical properties of what they represent is never a good idea. This causes confusion in a user's perception and interpretation of the state of their world and interferes with their seven states of action. As of late, the trend of employing skeuomorphic designs is not the best because it encourages user to assume certain properties of the metaphor used. One can see why ``metaphors had significantly facilitated understanding during the early days of computing, but had faded into the background as computing became more widely understood.`` \cite{metaphor-theory-practice}
+Employing metaphors that do not fulfill the physical properties of what they represent is never a good idea. This causes confusion in a user's perception and interpretation of the state of their world and interferes with their seven states of action. As of late, the trend of employing skeuomorphic designs is not the best because it encourages user to assume certain properties of the metaphor used. One can see why ``metaphors had significantly facilitated understanding during the early days of computing, but had faded into the background as computing became more widely understood.'' \cite{metaphor-theory-practice}
 
 Norman has a theory about conceptual models and how designers and users interact. In his model, the designer retains their own model called the \textit{design model}. A user has their own \textit{user model} that is developed through interaction with a given system. A system has a \textit{system image} which is what the user actually sees and what they use to base their mental model off of.
 Metaphor doesn't always work because the mental model of the designer must be the same of the user. Norman explains why this must be the case in his book \textit{The Design of Everyday Things} as so, ``The designer expects the user's model to be identical to the design model . . . If the system image does not make the design model clear and consistent, then the user will end up with the wrong mental model.''\cite{design-everyday} Having the wrong mental model about any given system will not prevent errors.
